refactor: (개발중)인터페이스 변경 적용